# django-filter-groups

./: .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .stylelintrc  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  readme.md
django_filter_groups/: forms.py
django_filter_groups/static/django_filter_groups/: filter.css  filter.js
django_filter_groups/templates/: filters.html
django_filter_groups/templatetags/: django_filters_groups.py
django_filters_groups/: forms.py  utils.py
django_filters_groups/static/django_filters_groups/: filter-defaults.js  filter.css  filter.js
django_filters_groups/templates/django_filters_groups/: filters.html
django_filters_groups/templatetags/: django_filters_groups.py
example/: README.md  asgi.py  requirements.txt  settings-dev.py  settings.py  urls.py  wsgi.py
example/app/: apps.py  filters.py  models.py  urls.py  views.py
example/app/migrations/: 0001_initial.py  0002_auto_20211019_0019.py
example/app/templates/: index.html
templates/: index.html
test/: apps.py  models.py  urls.py
test/migrations/: 0001_initial.py
test_filters_groups/: asgi.py  settings-dev.py  settings.py  urls.py  wsgi.py
