[tool.poetry]
name = "django-filter-groups"
version = "0.2.0"
description = ""
authors = ["pnoryk <pnoryk@mail.ru>"]
homepage = "https://github.com/PNoryk/django-filter-groups"
repository = "https://github.com/PNoryk/django-filter-groups"
include = ["LICENSE"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.6.1"
Django = ">=2"
django-filter = ">=2.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
commitizen = "^2.18.1"
django-livereload-server = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
