[tool.poetry]
name = "django-filter-groups"
version = "0.4.3"
description = ""
authors = ["pnoryk <pnoryk@mail.ru>"]
repository = "https://github.com/PNoryk/django-filter-groups"
include = ["LICENSE"]
readme = "README.md"
packages = [
  { include = "django_filters_groups" }
]

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=2"
django-filter = ">=2.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
commitizen = "^2.18.1"
django-livereload-server = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
